--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Sự hỗ trợ</h3>
+                    <h3 class="footer__title">Sự hỗ trợ của</h3>
                     <ul>
                         <li><a href="https://firebase.google.com/" class="footer__link">Firebase</a></li>
                         <li><a href="https://www.devexpress.com/" class="footer__link">Devexpress</a></li>
@@ -235,7 +235,7 @@
                     <h3 class="footer__title">Các nền tảng</h3>
                     <ul>
                         <li><a href="https://www.android.com/" class="footer__link">Android</a></li>
-                        <li><a href="https://docs.microsoft.com/en-us/dotnet/desktop/winforms/?view=netdesktop-5.0" class="footer__link">Window form Desktop</a></li>
+                        <li><a href="https://docs.microsoft.com/en-us/dotnet/desktop/winforms/?view=netdesktop-5.0" class="footer__link">Windows form desktop</a></li>
                         <!--<li><a href="#" class="footer__link">Privacy policy</a></li>
                         <li><a href="#" class="footer__link">Terms of services</a></li>-->
                     </ul>
