--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
+        <link rel="icon" type= "image/png" href="assets/img/logo_icon.png">
+
         <title>Unigram</title>
     </head>
     <body>
