--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                     <a href="#" class="footer__logo">Ungram</a>
                     <span class="footer__description">Liên kết khác</span>
                     <div>
-                        <a href="https://www.facebook.com/phuong.lethanh.3158" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                        <a href="https://www.youtube.com/channel/UCz1TycB-bsiFgp7Qmeitl6w" class="footer__social"><i class='bx bxl-youtube'></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100075217611349" class="footer__social"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.youtube.com/channel/UCTxE6DXYep9mx7fS2i1CIiA" class="footer__social"><i class='bx bxl-youtube'></i></a>
                         <a href="https://twitter.com/LThnhPhng11" class="footer__social"><i class='bx bxl-twitter'></i></a>
                     </div>
                 </div>
